carbon: Fix charts on detail pages not showing

--- a/carbon/components/cards/offVsOnChain/VerraCreditsBreakdownCard/styles.module.scss
+++ b/carbon/components/cards/offVsOnChain/VerraCreditsBreakdownCard/styles.module.scss
@@ -85,6 +85,9 @@
 }
 // Layout adjustments for dettail page
 [aria-roledescription="detailPage"] {
+  &.card {
+    height: auto;
+  }
   .issuedvsRetiredWrapper {
     width: 24rem;
   }
